<resources>
    <string name="app_name">Calculator</string>

    // Numbers
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    // Operators text
    <string name="operator">⁺⧸₋</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string name="multiply">×</string>
    <string name="division">÷</string>

    // Operators tags
    <string name="plus_tag">+</string>
    <string name="minus_tag">-</string>
    <string name="multiply_tag">*</string>
    <string name="division_tag">/</string>

    // Equals
    <string name="equal">=</string>

    // Especial buttons
    <string name="comma">,</string>
    <string name="clear_error">CE</string>
    <string name="clear">C</string>
    <string name="delete">⌫</string>

    // Messages
    <string name="toast_message">La resta no se puede hacer porque el resto es negativo</string>


</resources>